syntax = "proto3";
package protocol;
import "type.proto";

option go_package = "protocol";
option java_multiple_files = true;
option java_package = "com.test.fgum.service.protocol";



service FridaService {
    rpc getCurJScript (Empty) returns (GrpcMessage) {}
    rpc isServerStart (Empty) returns (Empty) {}
    rpc Regist(Use) returns (Empty);
    rpc Subscribe(stream GrpcMessage) returns (stream GrpcMessage);
    rpc publishes(stream GrpcMessage) returns (stream GrpcMessage);

}




